data/derived/fa15/progs/unify/prog1298.ml.out
Characters 121-130:
  | Sine e -> Printf.printf "sin(pi*" exprToString e
                            ^^^^^^^^^
Error: This expression has type
         ('a -> 'b -> 'c, out_channel, unit, unit, unit, 'a -> 'b -> 'c)
         CamlinternalFormatBasics.fmt
       but an expression was expected of type
         ('a -> 'b -> 'c, out_channel, unit, unit, unit, unit)
         CamlinternalFormatBasics.fmt
       Type 'a -> 'b -> 'c is not compatible with type unit 
